# accumula

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: accumula_config_generator.cmake
cmake/templates/: accumula-config.template.cmake
src/accumula/: CMakeLists.txt  connection.h  filters.h  getters.h  macros.h
src/accumula/accumulator/: bar_generator.h  fixed_window_storage.h  linked_accumulator.h  linked_storage.h  minmax.h  sum.h  window_filter.h  window_storage.h
src/accumula/concepts/: accumulators.h  addition.h  basic.h  storage.h  subtraction.h
src/accumula/legacy/: range_accumulator.h
src/accumula/parameters/: parameters.h
src/accumula/utils/: ref.h
test/: all.cpp  simple.cpp
